--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,7 @@ unsafe = true
 [params.reveal_hugo]
 custom_theme = "custom-theme.scss"
 custom_theme_compile = true
+# load_default_plugins = false
 highlight_theme = "monokai-sublime"
 width = 1280
 height = 720
